# PharmAI

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  LICENSE  README.md  add_color_please.py  dspy_config.json  dspy_repl.py  dspy_utils.py  examples.json  main.py  mcp_server.py  pyproject.toml  requirements.txt  saved_script_tmpaz82va9g.R  simulate_a_clinical_trial_using_mrgsolve.R  system_overview.excalidraw
data/: analysis_plan_arimab.docx  pc.csv
diagrams/: expanded_system_overview.excalidraw
getting_started/: README.md  fit_poppk_model_analysis.R  llm_feedback.py  pharmacometric_ai_demo.ipynb  simulate_pk_data.py
getting_started/data/: simulated_pk_data.csv
repl_examples/life/: add_color_please.py  create_a_simplified_version_of_conways_game_of_lif.py  use_a_game_engine_so_that_this_renders_well.py
repl_examples/pkpd_simulation/: create_realistic.R  get_it_to_run_properly.R  simulated_pkpd_data.csv
src/tools/: __init__.py  dspy_repl.py  extract_tasks_tool.py
synthetic_data/: examples_archive.json  synthetic_data_generator.ipynb
synthetic_data/Dermakinib/: analysis_plan.md  simulation.R
synthetic_data/Dermakinib/data/: dm.csv  ex.csv  pp.csv
synthetic_data/generated_data/Glucamax/: Glucamax_analysis_plan.md  dm.csv  ex.csv  (+6 more)
synthetic_data/generated_plans/: Cardiogen_analysis_plan.md  Cardiogen_simulation.R  Glucamax_analysis_plan.md  Glucamax_simulation.R  Oncotarget_analysis_plan.md  Oncotarget_simulation.R
temp_workdir/: debug_the.R
templates/: analysis_plan_template.md  report_template.md  run_workflow_template.ipynb  template_tasks.md
